add_executable(best_time_to_buy_and_sell_stock best_time_to_buy_and_sell_stock.cpp)
set_target_properties(best_time_to_buy_and_sell_stock PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(best_time_to_buy_and_sell_stock2 best_time_to_buy_and_sell_stock2.cpp)
set_target_properties(best_time_to_buy_and_sell_stock2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(jump_game jump_game.cpp)
set_target_properties(jump_game PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(jump_game2 jump_game2.cpp)
set_target_properties(jump_game2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(length_of_last_word length_of_last_word.cpp)
set_target_properties(length_of_last_word PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(majority_element majority_element.cpp)
set_target_properties(majority_element PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(merge_sorted_array merge_sorted_array.cpp)
set_target_properties(merge_sorted_array PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cpp)
set_target_properties(remove_duplicates_from_sorted_array PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(remove_duplicates_from_sorted_array2 remove_duplicates_from_sorted_array2.cpp)
set_target_properties(remove_duplicates_from_sorted_array2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(remove_element remove_element.cpp)
set_target_properties(remove_element PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(reverse_words_in_a_string reverse_words_in_a_string.cpp)
set_target_properties(reverse_words_in_a_string PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(rotate_array rotate_array.cpp)
set_target_properties(rotate_array PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)

add_executable(trapping_rain_water trapping_rain_water.cpp)
set_target_properties(trapping_rain_water PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/array)
